--- a/museum/style.css
+++ b/museum/style.css
@@ -246,8 +246,10 @@ h3 {
 
 .popup {
   position: fixed;
-  width: 100vw;
-  height: 100vh;
+  /* width: 100vw; */
+  /* height: 100vh; */
+  height: 100%;
+  width: 100%;
   background-color: rgba(3, 3, 3, 0.8);
   top: 0;
   left: 0;
