--- a/museum-adaptive/src/sass/components/_video.scss
+++ b/museum-adaptive/src/sass/components/_video.scss
@@ -315,6 +315,7 @@
   background-image: url("./assets/icons/player/fullscreen_exit.svg");
 }
 
+
 /* slider */
 
 .video__slider {
@@ -342,14 +343,74 @@
   @include media-laptop-low {
     padding-bottom: 27.5%;
   }
+  .video__slide_logo {
+    position: absolute;
+    top: 10px;
+    left: 10px;
+    height: 40px;
+    width: 40px;
+    background-image: url('./assets/videos/icon-iframe.png');
+    background-size: contain;
+    background-repeat: no-repeat;
+  }
+  .video__slide_link {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    
+  
 
+    .video__slide_img {
+      position: absolute;
+      top: 0;
+      left: 0;
+      height: 100%;
+      width: 100%;
+      border: none;
+      background-image: url('../../assets/videos/icon-iframe.jpg');
+      background-size: contain;
+      background-repeat: no-repeat;
+      background-position: top 0 left 0;
+    }
+  }
+  .video__slide_btn {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 68px;
+    height: 48px;
+    border: none;
+    transform: translate(-50%, -50%);
+    padding: 0;
+    background-color: transparent;
+    cursor: pointer;
+    z-index: 1;
+
+  }
+
+  .video__button-shape {
+    fill:#212121;
+    fill-opacity: 0.8;
+  }
+  .video__button-icon {
+    fill: #ffffff;
+  }
+  &:hover,
+  .video__slide_btn:focus {
+    .video__button-shape {
+      fill:#ff0000;
+      fill-opacity: 1;
+    }
+  }
   .slider__iframe {
     position: absolute;
     top: 0;
     left: 0;
     height: 100%;
     width: 100%;
-    border: 0;
+    border: none;
   }
 }
 
