--- a/museum-adaptive/style.css
+++ b/museum-adaptive/style.css
@@ -404,7 +404,7 @@ h3 {
   }
 }
 .burger__nav .burger__container .burger__container_img1 {
-  background-image: url("../../assets/img/burger-menu/image-1.jpg");
+  background-image: url("./assets/img/burger-menu/image-1.jpg");
   background-size: inherit;
 }
 @media (max-width: 550px) {
@@ -420,26 +420,26 @@ h3 {
   gap: 0 20px;
 }
 .burger__nav .burger__container .container__img .burger__container_img2 {
-  background-image: url("../../assets/img/burger-menu/image-2.jpg");
+  background-image: url("./assets/img/burger-menu/image-2.jpg");
   background-size: inherit;
 }
 @media (max-width: 550px) {
   .burger__nav .burger__container .container__img .burger__container_img2 {
-    background-image: url("../../assets/img/burger-menu/image-5.jpg");
+    background-image: url("./assets/img/burger-menu/image-5.jpg");
   }
 }
 .burger__nav .burger__container .container__img .burger__container_img3 {
   background-size: inherit;
-  background-image: url("../../assets/img/burger-menu/image-3.jpg");
+  background-image: url("./assets/img/burger-menu/image-3.jpg");
 }
 @media (max-width: 550px) {
   .burger__nav .burger__container .container__img .burger__container_img3 {
-    background-image: url("../../assets/img/burger-menu/image-6.jpg");
+    background-image: url("./assets/img/burger-menu/image-6.jpg");
   }
 }
 .burger__nav .burger__container .container__img .burger__container_img4 {
   background-size: inherit;
-  background-image: url("../../assets/img/burger-menu/image-4.jpg");
+  background-image: url("./assets/img/burger-menu/image-4.jpg");
   display: none;
 }
 @media (max-width: 550px) {
@@ -479,7 +479,7 @@ h3 {
   flex-direction: column;
 }
 .burger__nav .burger__nav__lists > li {
-  background-image: url("../../assets/icons/welcome/menu-arrow.svg");
+  background-image: url("./assets/icons/welcome/menu-arrow.svg");
   background-position: center right;
   background-repeat: no-repeat;
   width: 122px;
@@ -710,7 +710,7 @@ h3 {
   font-style: normal;
   width: 400px;
 }
-@media (max-width: 550px) {
+@media (max-width: 1000px) {
   .data__forma {
     width: 100%;
   }
@@ -720,6 +720,11 @@ h3 {
   padding-top: 72px;
   display: flex;
   justify-content: space-between;
+}
+@media (max-width: 1000px) {
+  .date__time {
+    gap: 0 28px;
+  }
 }
 @media (max-width: 550px) {
   .date__time {
@@ -749,7 +754,7 @@ input[type=date] {
   outline: none;
   border-radius: 0;
 }
-@media (max-width: 550px) {
+@media (max-width: 1000px) {
   input[type=date] {
     width: 100%;
   }
@@ -766,7 +771,7 @@ input[type=time] {
   outline: none;
   border-radius: 0;
 }
-@media (max-width: 550px) {
+@media (max-width: 1000px) {
   input[type=time] {
     width: 100%;
   }
@@ -796,6 +801,11 @@ input[type=time]::before {
   --bg-image: url("./assets/icons/boolking/close-arrow.svg");
 }
 
+@media (max-width: 1000px) {
+  .label__data {
+    width: 100%;
+  }
+}
 .label__data input[type=date]::-webkit-datetime-edit,
 .label__data input[type=time]::-webkit-datetime-edit {
   visibility: var(--visibility-input);
@@ -817,6 +827,11 @@ input[type=time]:focus:before {
   color: #000000;
   padding-left: 43px;
   background-repeat: no-repeat;
+}
+@media (max-width: 1000px) {
+  .input__forma {
+    width: 100%;
+  }
 }
 @media (max-width: 635px) {
   .input__forma {
@@ -1519,6 +1534,8 @@ h6::after {
 .nav__footer {
   display: flex;
   padding: 12px 10% 0 10%;
+  position: relative;
+  z-index: 100;
 }
 @media (max-width: 1240px) {
   .nav__footer {
@@ -2899,13 +2916,67 @@ h6::after {
     padding-bottom: 27.5%;
   }
 }
+.video__slide .video__slide_logo {
+  position: absolute;
+  top: 10px;
+  left: 10px;
+  height: 40px;
+  width: 40px;
+  background-image: url("./assets/videos/icon-iframe.png");
+  background-size: contain;
+  background-repeat: no-repeat;
+}
+.video__slide .video__slide_link {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+.video__slide .video__slide_link .video__slide_img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  border: none;
+  background-image: url("../../assets/videos/icon-iframe.jpg");
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: top 0 left 0;
+}
+.video__slide .video__slide_btn {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 68px;
+  height: 48px;
+  border: none;
+  transform: translate(-50%, -50%);
+  padding: 0;
+  background-color: transparent;
+  cursor: pointer;
+  z-index: 1;
+}
+.video__slide .video__button-shape {
+  fill: #212121;
+  fill-opacity: 0.8;
+}
+.video__slide .video__button-icon {
+  fill: #ffffff;
+}
+.video__slide:hover .video__button-shape,
+.video__slide .video__slide_btn:focus .video__button-shape {
+  fill: #ff0000;
+  fill-opacity: 1;
+}
 .video__slide .slider__iframe {
   position: absolute;
   top: 0;
   left: 0;
   height: 100%;
   width: 100%;
-  border: 0;
+  border: none;
 }
 
 /* dots style */
