--- a/museum-dom/src/sass/components/_tickets.scss
+++ b/museum-dom/src/sass/components/_tickets.scss
@@ -324,15 +324,26 @@ input:checked ~ .checkmark:after {
   bottom: -15px;
   z-index: 100;
   font-size: 13px;
-  line-height: 10px;
+  line-height: 15px;
   font-weight: normal;
   font-style: normal;
   color: red;
   visibility: hidden;
+  padding-left: 5px;
+}
+.valid__forma_cvc {
+  bottom: 38px;
 }
 .valid__forma_active {
   visibility: visible;
+  background-color: #ffffff;
+  border-radius: 3px;
+  z-index: 10;
 }
 .invalid__input {
   border-color: red;
+}
+.invalid__input_card {
+  border: 1px solid red;
+  
 }
