--- a/momentum/css/style.css
+++ b/momentum/css/style.css
@@ -364,7 +364,7 @@ button {
   }
 }
 
-/* language */
+/* Setting */
 
 .setting__option {
   display: flex;
@@ -372,8 +372,8 @@ button {
   justify-content: space-between;
   font-size: 14px;
   padding: 15px 0;
+  padding-left: 10px;
   border-bottom: 1px solid #fff;
-
 }
 
 .language__icons,
@@ -477,4 +477,130 @@ button {
 .hidden_block {
   visibility: hidden;
   opacity: 0;
+}
+
+.setting__display p {
+  text-align: start;
+  padding: 15px 0;
+  border-bottom: 1px solid #fff;
+}
+.setting__display .setting__option {
+  padding: 10px 0 10px 10px;
+}
+
+/* TodoList */
+
+.todo {
+  transition: all 0.6s ease-in-out;
+}
+.todo__wrapper {
+  display: flex;
+  flex-direction: column;
+  gap: 20px 0;
+  max-width: 300px;
+  border-radius: 10px;
+  text-align: start;
+}
+
+.todo__wrapper h2 {
+  color: #fff;
+  text-align: center;
+  font-weight: normal;
+}
+
+.task__add {
+  color: white;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.task__list {
+  display: flex;
+  flex-direction: column;
+  gap: 20px 0;
+  list-style: none;
+}
+
+.task__list li {
+  cursor: pointer;
+  position: relative;
+  padding: 5px;
+  background: #eee;
+  color: #000000;
+  font-size: 16px;
+  transition: all 0.2s ease;
+  border-radius: 10px;
+  padding-left: 40px;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+.task__list li:nth-child(odd) {
+  background: #f9f9f9;
+}
+
+.task__list li:hover {
+  background: #ddd;
+}
+
+.task__list li.checked {
+  background: #888;
+  color: #fff;
+  text-decoration: line-through;
+}
+
+.task__list li.checked::before {
+  content: "";
+  position: absolute;
+  border-color: #fff;
+  border-style: solid;
+  border-width: 0 2px 2px 0;
+  top: 3px;
+  left: 16px;
+  transform: rotate(45deg);
+  height: 15px;
+  width: 7px;
+}
+
+.close {
+  position: absolute;
+  right: 0;
+  top: 0;
+  padding: 5px 10px;
+  border-radius: 10px;
+  transition: all 0.6s ease-in-out;
+}
+.close:hover {
+  color: white;
+  transform: scale(1.5);
+}
+
+.input_task {
+  margin: 0;
+  border: none;
+  width: 75%;
+  padding: 5px;
+  font-size: 16px;
+  border-radius: 10px;
+}
+
+.btn__add {
+  padding: 5px;
+  width: 15%;
+  background: #d9d9d9;
+  color: #555;
+  text-align: center;
+  font-size: 16px;
+  cursor: pointer;
+  transition: all 0.6s ease-in-out;
+  border-radius: 10px;
+}
+
+.btn__add:hover {
+  background-color: #C5B358;
+  color: #fff;
+  /* transform: scale(1.2); */
 }
