feat: add game artist-quiz

--- a/art-quiz/src/sass/abstracts/_constants.scss
+++ b/art-quiz/src/sass/abstracts/_constants.scss
@@ -2,3 +2,5 @@ $color-active-bt: #FFBCA2;
 $color-black: #000000;
 $color-white: #ffffff;
 $color-white-off: #cccccc;
+$color-mis: #FF7E7E;
+$color-right:#3DDA69;
