--- a/art-quiz/src/sass/layout/_header.scss
+++ b/art-quiz/src/sass/layout/_header.scss
@@ -49,24 +49,22 @@
   padding: 22px 10px;
   display: flex;
   justify-content: space-between;
+  align-items: center;
 
   .progress__game {
     width: 80%;
-    background: transparent;
+    // background: transparent;
+    background: linear-gradient(
+      to right,
+      $color-active-bt 0%,
+      $color-active-bt 10%,
+      $color-white 10%,
+      $color-white 100%
+    );
+    height: 3px;
     -webkit-appearance: none;
     -moz-appearance: none;
     appearance: none;
-
-    &::-webkit-slider-runnable-track {
-      background: linear-gradient(
-        to right,
-        $color-active-bt 0%,
-        $color-active-bt 10%,
-        $color-white 10%,
-        $color-white 100%
-      );
-      height: 3px;
-    }
 
     &::-webkit-slider-thumb {
       -webkit-appearance: none;
@@ -78,7 +76,9 @@
     }
   }
 
-  .art-game__time {
+  .game__time {
     color: $color-white;
+    width: 40px;
+    text-align: center;
   }
 }
