--- a/art-quiz/src/sass/layout/_wrapper.scss
+++ b/art-quiz/src/sass/layout/_wrapper.scss
@@ -1,13 +1,25 @@
 .wrapper {
   max-width: 1440px;
   margin: auto;
+  padding: 0 16px;
+}
+.wrapper__main {
+  width: 100%;
+  height: 100vh;
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-image: url('./assets/img/start_bg.jpg');
 
   @include mobile {
-    padding: 0 16px;
+    background-image: url('./assets/img/start_bg_table.jpg');
   }
 }
+
 .wrapper__main,
-.wrapper__setting {
+.wrapper__setting,
+.wrapper__art-game,
+.categories__wrapper {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -16,4 +28,24 @@
 
 .categories__wrapper {
   position: relative;
+}
+.wrapper__game {
+  max-width: 825px;
+  margin: auto;
+
+  @include table {
+    padding: 0 16px;
+  }
+  @include mobile {
+    padding: 0 16px;
+  }
+}
+.wrapper__popup {
+  padding: 5%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  // height: 100%;
+  gap: 1em 0;
 }
