feat: add setting-page and fix art-game

--- a/art-quiz/src/sass/base/_base.scss
+++ b/art-quiz/src/sass/base/_base.scss
@@ -74,3 +74,16 @@ a {
     opacity: 1;
   }
 }
+
+.hide_popup {
+  animation: hide-this 1s;
+}
+
+@keyframes hide-this {
+  0% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
