--- a/art-quiz/src/sass/pages/_setting.scss
+++ b/art-quiz/src/sass/pages/_setting.scss
@@ -22,28 +22,25 @@
       display: flex;
       justify-content: flex-start;
       align-items: center;
-      gap: 0 2%;
+      gap: 0 5%;
 
-      @include mobile {
-        justify-content: space-between;
-      }
+      // @include mobile {
+      //   justify-content: space-around;
+      // }
 
       .progress__volume {
         width: 30%;
         -webkit-appearance: none;
         -moz-appearance: none;
         appearance: none;
-
-        &::-webkit-slider-runnable-track {
-          background: linear-gradient(
-            to right,
-            $color-active-bt 0%,
-            $color-active-bt 40%,
-            $color-white 40%,
-            $color-white 100%
-          );
-          height: 3px;
-        }
+        background: linear-gradient(
+          to right,
+          $color-active-bt 0%,
+          $color-active-bt 40%,
+          $color-white 40%,
+          $color-white 100%
+        );
+        height: 3px;
 
         &::-webkit-slider-thumb {
           -webkit-appearance: none;
@@ -52,7 +49,6 @@
           background-color: $color-white;
           border-radius: 50%;
           cursor: pointer;
-          transform: translateY(-35%);
           @extend %transition;
 
           &:hover {
@@ -76,6 +72,11 @@
         &:hover {
           opacity: 0.6;
         }
+      }
+      .volume__icon_mute {
+        width: 23px;
+        height: 16px;
+        background-image: url("./assets/icons/setting/volume-off.svg");
       }
     }
   }
