--- a/art-quiz/src/style.scss
+++ b/art-quiz/src/style.scss
@@ -7,6 +7,7 @@
 @import "sass/layout/footer";
 @import "sass/layout/popup-answer";
 @import "sass/layout/popup-end-round";
+@import "sass/layout/popup-exit";
 
 @import "sass/pages/main";
 @import "sass/pages/setting";
