--- a/art-quiz/src/style.scss
+++ b/art-quiz/src/style.scss
@@ -12,6 +12,7 @@
 @import "sass/pages/main";
 @import "sass/pages/setting";
 @import "sass/pages/categories";
+@import "sass/pages/score";
 @import "sass/pages/art-game";
 
 @import "sass/base/base";
