--- a/art-quiz/src/sass/layout/_header.scss
+++ b/art-quiz/src/sass/layout/_header.scss
@@ -1,14 +1,14 @@
 .main__header {
   display: flex;
   justify-content: flex-end;
-  padding: 22px 10px;
+  padding: 22px 0;
 }
 
 .setting__header {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 3% 3%;
+  padding: 3% 0;
 
   .setting__btn {
     display: flex;
@@ -42,11 +42,11 @@
 .categories__header {
   display: flex;
   justify-content: space-between;
-  padding: 22px 10px;
+  padding: 22px 0;
 }
 
 .art-game__header {
-  padding: 22px 10px;
+  padding: 22px 0;
   display: flex;
   justify-content: space-between;
   align-items: center;
