--- a/art-quiz/src/sass/base/_base.scss
+++ b/art-quiz/src/sass/base/_base.scss
@@ -51,7 +51,7 @@ a {
     opacity: 0;
   }
   51% {
-    transform: translateX(0);
+    transform: translateX(-100%);
     opacity: 0;
   }
   100% {
