--- a/art-quiz/src/sass/pages/_art-game.scss
+++ b/art-quiz/src/sass/pages/_art-game.scss
@@ -15,12 +15,11 @@
     .game__question {
       color: $color-white;
       @include font(22px, 28px, 500);
-
+      padding: 15px 0;
     }
     .art__img {
       width: 80%;
       border-radius: 5%;
-      padding: 15px 0;
       @include table {
         width: 80%;
       }
@@ -42,6 +41,46 @@
 
       @include mobile {
         gap: 12px 10px;
+      }
+
+      
+    }
+    .img__container {
+      width: 100%;
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      grid-template-rows: 1fr 1fr;
+      gap: 25px 25px;
+      
+      .img__card {
+        @extend %transition;
+        cursor: pointer;
+        position: relative;
+        
+        .sheet {
+          border-radius: 10%;
+          position: absolute;
+          top: 0;
+          left: 0;
+          width: 100%;
+          height: 100%;
+        }
+        img {
+          width: 100%;
+          height: 100%;
+          border-radius: 10%;
+        }
+        &:hover {
+          transform: scale(1.05);
+        }
+      }
+      .right_img {
+        background-color: $color-right;
+        opacity: 0.4;
+      }
+      .wrong_img {
+        background-color: $color-mis;
+        opacity: 0.4;
       }
     }
   }
