--- a/art-quiz/src/sass/pages/_score.scss
+++ b/art-quiz/src/sass/pages/_score.scss
@@ -40,7 +40,7 @@
     cursor: pointer;
     overflow: hidden;
     border-radius: 10%;
-    animation: show-yourself 0.5s;
+    animation: show-yourself 1s 1;
     @extend %transition;
     width: 195px;
     height: 206px;
