fix: fix href for tag a

--- a/art-quiz/src/sass/pages/_art-game.scss
+++ b/art-quiz/src/sass/pages/_art-game.scss
@@ -18,6 +18,7 @@
       padding: 15px 0;
     }
     .art__img {
+      padding: 15px 0;
       width: 80%;
       border-radius: 5%;
       @include table {
