--- a/art-quiz/src/sass/base/_buttons.scss
+++ b/art-quiz/src/sass/base/_buttons.scss
@@ -8,7 +8,7 @@ button {
   height: 34px;
   display: inline-block;
   background-image: url("./assets/icons/carbon_settings.svg");
-  @extend %transition;
+  @extend %transition-btn;
   cursor: pointer;
 
   &:hover {
@@ -26,7 +26,7 @@ button {
   border-radius: 25px;
   color: $color-white;
   @include font(24px, 28px, 500);
-  @extend %transition;
+  @extend %transition-btn;
   cursor: pointer;
   @include flex(center, center);
 
@@ -47,7 +47,7 @@ button {
   display: inline-block;
   background-image: url("./assets/icons/setting/close-icon.svg");
   cursor: pointer;
-  @extend %transition;
+  @extend %transition-btn;
   margin-right: 15px;
 
   &:hover {
@@ -69,10 +69,13 @@ button {
   background-color: $color-white;
   font-size: 30px;
   cursor: pointer;
-  @extend %transition;
+  @extend %transition-btn;
 
   &:hover {
     background-color: $color-active-bt;
+  }
+  &:active {
+    transform: scale(0.8);
   }
 }
 .btn__choose {
@@ -82,7 +85,7 @@ button {
   border: 2px solid $color-white;
   border-radius: 25px;
   color: $color-white;
-  @extend %transition;
+  @extend %transition-btn;
   cursor: pointer;
   @include flex(center, center);
   
@@ -112,7 +115,7 @@ button {
   justify-content: center;
   @include font(22px, 22px, normal);
   cursor: pointer;
-  @extend %transition;
+  @extend %transition-btn;
   border: 2px solid $color-active-bt;
 
   @include mobile {
@@ -135,7 +138,7 @@ button {
   justify-content: center;
   @include font(22px, 22px, normal);
   cursor: pointer;
-  @extend %transition;
+  @extend %transition-btn;
   border: 2px solid $color-active-bt;
 
   &:hover {
