--- a/art-quiz/src/sass/pages/_categories.scss
+++ b/art-quiz/src/sass/pages/_categories.scss
@@ -50,6 +50,7 @@
   .card__img {
     overflow: hidden;
     border-radius: 10%;
+    transition: all 0.5s ease-out;
 
     img {
       @extend %transition;
@@ -64,8 +65,13 @@
   }
 
   &:hover {
-    img {
-      transform: scale(1.2);
+    .card__img {
+      -webkit-box-shadow: 0px 0px 15px 5px rgba(255, 188, 162, 0.8);
+      -moz-box-shadow: 0px 0px 15px 5px rgba(255, 188, 162, 0.8);
+      box-shadow: 0px 0px 15px 5px rgba(255, 188, 162, 0.8);
+      img {
+        transform: scale(1.2);
+      }
     }
   }
 }
