fix: fix bug with repeat clicks for answers

--- a/art-quiz/src/sass/pages/_art-game.scss
+++ b/art-quiz/src/sass/pages/_art-game.scss
@@ -20,7 +20,7 @@
       }
     }
     .art__img {
-      padding: 15px 0;
+      padding: 15px 5%;
       width: 80%;
       border-radius: 5%;
       @include table {
