--- a/migration-to-typescript/src/components/view/sources/sources.css
+++ b/migration-to-typescript/src/components/view/sources/sources.css
@@ -1,23 +1,28 @@
 .sources {
     display: flex;
-    flex-wrap: nowrap;
+    flex-wrap: wrap;
     width: 100%;
-    height: 120px;
+    height: 100%;
     overflow: auto;
     align-items: center;
     font: 300 1em 'Fira Sans', sans-serif;
+    padding-bottom: 10%;
 }
-
+.sources::-webkit-scrollbar {
+    width: 0;
+  }
 .source__item {
     background: none;
     border: 2px solid #30c5ff;
     font: inherit;
     line-height: 1;
     margin: 0.5em;
-    padding: 1em 2em;
+    padding: 1em 1em;
     color: #70d6ff;
     transition: 0.25s;
     cursor: pointer;
+    width: 100%;
+    text-align: center;
 }
 
 .source__item:hover,
@@ -30,5 +35,26 @@
 
 .source__item-name {
     font-weight: 400;
-    white-space: nowrap;
+    white-space: pre-wrap;
+    text-align: center;
+}
+
+@media (min-width: 319px) and (max-width: 686px) {
+
+    .source__item {
+        font-size: 0.7rem;
+        margin: 0.5em;
+        padding: 0.8em 0.1em;
+    }
+
+}
+
+@media (min-width: 686px) and (max-width: 1023px) {
+
+    .source__item {
+        font-size: 0.8rem;
+        margin: 0.5em;
+        padding: 0.8em 0.5em;
+    }
+
 }
