--- a/migration-to-typescript/src/global.css
+++ b/migration-to-typescript/src/global.css
@@ -2,34 +2,124 @@ body {
     color: #fff;
     background: #17181c;
     font-family: sans-serif;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 95vh;
+}
+.body-wrapper {
+    max-width: 1920px;
+    margin: 0 auto;
+    padding: 0 5%;
 }
 
-header {
+.header {
     padding: 10px 30px;
+    overflow: hidden;
+    padding-bottom: 10%;
 }
 
-header h1 {
+.header h1 {
     font-size: 40px;
     font-weight: 800;
 }
-
-footer {
-    height: 100px;
+.wrapper__header {
+    display: grid;
+    height: 100%;
+    grid-template-columns: 15% 85%;
+    gap: 0 2em;
+}
+.news {
+    overflow: auto;
+}
+.news::-webkit-scrollbar {
+    width: 0;
+}
+.footer {
+    height: 50px;
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: space-evenly;
+    justify-self: flex-end;
 }
-footer .copyright {
+.footer .copyright {
     font-size: 14px;
     color: #333;
     text-align: center;
 }
-footer .copyright a {
+.footer .copyright a {
     color: #444;
+    transition: all 0.5s ease-out;
 }
-footer .copyright a:hover {
-    color: #555;
+.footer .copyright a:hover {
+    color: #3fcc59;
 }
-footer .copyright:before {
+.footer .copyright:before {
     content: '©';
 }
+.rss {
+    background: url('https://rs.school/images/rs_school_js.svg');
+    background-size: 50%; 
+    display: inline-block;
+    background-position: center;
+    background-repeat: no-repeat;
+    width: 150px;
+    height: 70px;
+    transition: all 0.6s ease-out;
+}
+.rss:hover {
+    transform: scale(1.1);
+}
+.developer a {
+    color: #444;
+    font-size: 14px;
+    text-decoration: none;
+    transition: all 0.5s ease-out;
+}
+.developer:hover a {
+    color: #3fcc59;
+}
+
+@media (max-width: 1440px) {
+    .wrapper__header {
+        grid-template-columns: 20% 75%;
+        gap: 0 1em;
+    }
+}
+
+@media (max-width: 1023px) {
+
+    .body-wrapper {
+        padding: 0 5%;
+    }
+
+    .wrapper__header {
+        grid-template-columns: 25% 74%;
+        gap: 0 10px;
+    }
+
+}
+
+@media (min-width: 319px) and (max-width: 687px) {
+
+    .body-wrapper {
+        padding: 0;
+    }
+
+    .header {
+        padding: 10px 0;
+    }
+
+    .wrapper__header {
+        grid-template-columns: 30% 65%;
+        gap: 0 10px;
+    }
+    
+    .rss {
+        width: 100px;
+        height: 50px;
+    }
+}
+
+
+
