--- a/christmas-task/src/app/components/main/main-toys/main-toys.scss
+++ b/christmas-task/src/app/components/main/main-toys/main-toys.scss
@@ -12,4 +12,13 @@
     min-height: calc(100vh - 140px);
     width: 100%;
   }
+  
+  &__controls {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    max-width: 1920px;
+    font-size: 20px;
+    line-height: 40px;
+  }
 }
