--- a/christmas-task/src/app/components/type-filters/type-filters.scss
+++ b/christmas-task/src/app/components/type-filters/type-filters.scss
@@ -1,5 +1,5 @@
 .filters {
-  width: 480px;
+  flex: 1 0 30%;
   padding: 10px 20px;
   border-radius: 10px;
   background-color: rgba(31, 112, 127, 0.3);
