--- a/christmas-task/src/app/components/cards/card/card.scss
+++ b/christmas-task/src/app/components/cards/card/card.scss
@@ -1,4 +1,4 @@
-.toy {
+.card {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
@@ -49,16 +49,39 @@
     left: -8px;
 
     &::before {
+      content: "";
+      position: absolute;
+      height: 0;
+      width: 0;
       border-bottom: 8px solid #14455b;
       border-left: 8px solid transparent;
       top: -8px;
     }
 
     &::after {
+      content: "";
+      position: absolute;
+      height: 0;
+      width: 0;
       border-top: 20px solid transparent;
       border-bottom: 20px solid transparent;
       border-left: 15px solid #24c5db;
       right: -15px;
+    }
+  }
+}
+
+.active__toy {
+
+  .card__ribbon {
+    background: #CBB77A;
+
+    &::before {
+      border-bottom: 8px solid #14455b;
+    }
+
+    &::after {
+      border-left: 15px solid #CBB77A;
     }
   }
 }
