--- a/christmas-task/src/app/components/header/search/search.scss
+++ b/christmas-task/src/app/components/header/search/search.scss
@@ -5,7 +5,7 @@
   .search__input {
     width: 380px;
     height: 40px;
-    padding: 5px 25px;
+    padding: 5px 20px 5px 35px;
     margin: 10px 0;
     margin-right: 30px;
     border-radius: 20px;
@@ -16,29 +16,7 @@
     background-image: url("../../../../assets/svg/search.svg");
     background-size: 20px;
     background-repeat: no-repeat;
-    background-position: 330px center;
+    background-position: 10px center;
     backdrop-filter: blur(6px);
-  }
-
-  .search__favorite {
-    width: 48px;
-    height: 60px;
-    background-image: url("../../../../assets/svg/ball-2.svg");
-    background-size: 48px 60px;
-    background-position: left -8px;
-    background-repeat: no-repeat;
-
-    .count-toys {
-      display: inline-block;
-      min-width: 40px;
-      height: 40px;
-      margin-top: 10px;
-      margin-left: 4px;
-      border-radius: 50%;
-      text-align: center;
-      line-height: 40px;
-      font-size: 20px;
-      background-color: #278d9f;
-    }
   }
 }
