--- a/christmas-task/src/app/components/main/main-toys/main-toys.scss
+++ b/christmas-task/src/app/components/main/main-toys/main-toys.scss
@@ -11,6 +11,7 @@
     height: 100%;
     min-height: calc(100vh - 140px);
     width: 100%;
+    padding: 1% 0;
   }
   
   &__controls {
@@ -20,5 +21,8 @@
     max-width: 1920px;
     font-size: 20px;
     line-height: 40px;
+    margin: auto;
+    padding-bottom: 1%;
+    gap: 0 2rem;
   }
 }
