--- a/christmas-task/src/app/components/range-filters/range-filters.scss
+++ b/christmas-task/src/app/components/range-filters/range-filters.scss
@@ -1,5 +1,5 @@
 .range-filters {
-  width: 540px;
+  flex: 1 0 35%;
   padding: 10px 20px;
   border-radius: 10px;
   background-color: rgba(31, 112, 127, 0.3);
