--- a/christmas-task/src/app/components/sorts/reset-btn/reset-btn.scss
+++ b/christmas-task/src/app/components/sorts/reset-btn/reset-btn.scss
@@ -11,4 +11,9 @@
   font-size: 20px;
   font-weight: 400;
   font-family: "Open Sans", sans-serif;
+  transition: 0.3s;
+
+  &:hover {
+    border: 1px solid #fff;
+  }
 }
