--- a/christmas-task/src/app/components/sorts/select/select.scss
+++ b/christmas-task/src/app/components/sorts/select/select.scss
@@ -16,6 +16,12 @@
   position: relative;
   width: 330px;
   height: 40px;
+
+  &:hover {
+    .selectCustom-trigger {
+      border: 1px solid #fff;
+    }
+  }
 }
 
 .selectCustom-trigger {
@@ -34,6 +40,7 @@
   border-radius: 0.4rem;
   cursor: pointer;
   padding-left: 1rem;
+  transition: 0.3s;
 }
 
 .selectCustom-trigger::after {
