--- a/christmas-task/src/app/components/type-filters/base-filters/shape.scss
+++ b/christmas-task/src/app/components/type-filters/base-filters/shape.scss
@@ -15,6 +15,15 @@
     background-position: center center;
     cursor: pointer;
     transition: 0.3s;
+    
+    &:hover {
+      // filter: invert(20%);
+      transform: scale(1.1);
+    }
+
+    &:active {
+      filter: invert(9%) sepia(63%) saturate(461%) hue-rotate(322deg) brightness(83%) contrast(88%);
+    }
   }
 
   .ball {
