--- a/christmas-task/src/app/components/type-filters/base-filters/size.scss
+++ b/christmas-task/src/app/components/type-filters/base-filters/size.scss
@@ -16,6 +16,14 @@
     background-position: center center;
     cursor: pointer;
     transition: 0.3s;
+
+    &:hover {
+      transform: scale(1.1);
+    }
+
+    &:active {
+      filter: invert(9%) sepia(63%) saturate(461%) hue-rotate(322deg) brightness(83%) contrast(88%);
+    }
   }
 
   .big {
